# eye-ai-ml

./: CONTEXT.md  pyproject.toml
.github/workflows/: release.yml
docs/adr/: 0001-restore-user_list-in-deriva-ml.md  0002-extract-data-curation-from-eyeai.md  0003-image_tall-denormalizer-rewrite.md
docs/vocabularies/: diagnosis-severity-definitions.md
eye_ai/: eye_ai.py
scripts/catalog_management/: add_multimodal_measurements.py  migrate_element_dataset_junctions.py  migrate_image_dataset_to_dataset_image.py
tests/: conftest.py  manual_test_multimodal_wide.py  manual_test_severity_analysis.py  test_bag_fk_traversal.py  test_eye_ai.py  test_eye_ai_units.py  test_integration.py  test_multimodal_wide.py  test_multimodal_wide_from_subject_bag.py
