[project]
name = "eye-ai"
authors = [
    {name = "ISI ISRD", email = "isrd-dev@isi.edu"},
]
description = "ML code for the EYE-AI project"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deriva",
    "deriva-ml",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "bump-my-version",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "setuptools_scm",
    "ruff"
]
lint = [
    "ruff>=0.12.7",
]

[tool.uv]
python-preference = "only-managed"
index-strategy = "unsafe-any-match"

[tool.uv.sources]
deriva-ml = { git = "https://github.com/informatics-isi-edu/deriva-ml", branch = "main" }
deriva = { git = "https://github.com/informatics-isi-edu/deriva-py", branch = "2.0-dev" }

[[tool.uv.index]]
name = "github"
url = "https://pypi.pkg.github.com/eye-ai-usc/" # typically ghcr.io
publish-url = "https://pypi.pkg.github.com/eye-ai-usc/"
explicit = true


[tool.setuptools.package-data]
# include VERSION file to a package

[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"

[metadata]
license = "Apache 2.0"
keywords = ["eye-ai", "ml"]
