[project]
name = "eye-ai"
authors = [
    {name = "ISI ISRD", email = "isrd-dev@isi.edu"},
]
description = "ML code for the EYE-AI project"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # deriva (deriva-py) is intentionally NOT listed here: it is pulled in
    # transitively by deriva-ml, which pins it from git. eye_ai imports only
    # deriva_ml, never deriva directly. Let deriva-ml drive the deriva pin.
    "deriva-ml",
    "pandas",
    "pillow",
    "matplotlib",
    "scikit-learn",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "bump-my-version",
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "setuptools_scm",
    "ruff"
]
lint = [
    "ruff>=0.12.7",
]
jupyter = ["ipykernel", "jupyter"] 

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
# deriva-ml tracks the latest from git main (no version pin) -- refresh with
# `uv lock --upgrade-package deriva-ml`. (Recent must-have changes:
# DerivaML.user_list() in PR #282 and get_denormalized_as_dataframe(
# system_columns=...) in PR #283, both used by EyeAI.image_tall -- both are in
# main.)
deriva-ml = { git = "https://github.com/informatics-isi-edu/deriva-ml.git" }


[tool.setuptools.package-data]
# include VERSION file to a package

[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Manual integration runners (argparse scripts, run by hand against a live
# catalog) are named manual_*.py and are not collected as pytest tests.
python_files = ["test_*.py"]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"

[metadata]
license = "Apache 2.0"
keywords = ["eye-ai", "ml"]
